tests/NormalTests/paczka2/big_fuzzy/40936171.err
Error in line 1: A642 A405 72,3
Error in line 2: r64F A642 96,6
Error in line 4: 0XZ7LifozF A405 80,9
Error in line 16: UK9saud6 S90 3,6
Error in line 22: UK9saud6 S90 92,1
Error in line 29: r64F S897 19,3
Error in line 33: r64F A405 46,9
Error in line 44: ASV A642 67,3
Error in line 40: UK9saud6 S90 42,4
Error in line 42: r64F A642 39,6
Error in line 52: r64F S897 28,8
Error in line 51: YhIq7Q5 S897 36,0
Error in line 58: A642 S9 63,4
Error in line 59: YhIq7Q5 A405 82,9
Error in line 57: r64F A405 12,5
Error in line 65: r64F A642 67,8
Error in line 71: YhIq7Q5 S897 41,2
Error in line 74: CpVuKgulaIW A405 83,1
Error in line 73: YhIq7Q5 A642 39,7
Error in line 78: UK9saud6 A642 37,2
Error in line 70: ASV A642 136,7
Error in line 88: r64F A642 72,2
Error in line 87: ASV A405 29,9
Error in line 98: r64F A405 41,1
Error in line 100: YhIq7Q5 S90 18,7
Error in line 99: ASV S90 96,9
Error in line 77: A642 S90 299,4
Error in line 117: r64F S897 24,2
Error in line 121: r64F S90 42,1
Error in line 128: CpVuKgulaIW A642 94,8
Error in line 142: A642 S90 0,7
Error in line 156: r64F A405 85,8
Error in line 157: CpVuKgulaIW S897 32,3
Error in line 183: UK9saud6 A405 20,6
Error in line 193: CpVuKgulaIW A642 87,6
Error in line 186: A642 A405 37,0
Error in line 203: YhIq7Q5 S90 51,1
Error in line 199: UK9saud6 A405 76,9
Error in line 178: ASV S90 43,6
Error in line 216: CpVuKgulaIW S897 41,7
Error in line 222: UKMsaud6 S8M7 38,5
Error in line 223: UK9saud6 S897 181,7
Error in line 215: ASV S897 6,2
Error in line 220: CpVuKgulaIW A405 2,2
Error in line 230: r64F S897 10,9
Error in line 229: UK9saud6 A642 57,5
Error in line 238: A642 A642 37,6
Error in line 240: 0XZ7LifozF A405 41,2
